[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/stats/Stats.gd" type="Script" id=1]
[ext_resource path="res://scenes/stats/fonts/arial.tres" type="DynamicFont" id=2]

[node name="StatsDisplay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="FullRect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 16.0
margin_right = -744.0
margin_bottom = -463.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.560784 )

[node name="MarginContainer" type="MarginContainer" parent="FullRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="FullRect/MarginContainer"]
margin_right = 242.0
margin_bottom = 97.0

[node name="FPS" type="Label" parent="FullRect/MarginContainer/VBoxContainer"]
margin_right = 242.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "FPS: 0"

[node name="PhyFrameCount" type="Label" parent="FullRect/MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 242.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Simulation step count: 0"

[node name="IdleFrameCount" type="Label" parent="FullRect/MarginContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 242.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 2 )
text = "Simulation step count: 0"

[node name="EngineTime" type="Label" parent="FullRect/MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 242.0
margin_bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Simulation step count: 0"
